Fix mac start stript for local backend.